--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^6.5.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
